<resources>
    <string name="app_name">Finance PRO</string>
    <string name="quest1">В каком городе вы родились?</string>
    <string name="quest2">Как зовут преподавателя ОПИ?</string>
    <string name="quest3">Год вашего рождения?</string>
    <string name="process">Загрузка...</string>
    <string name="cat_title">Категории</string>
    <string name="cat_btn_add">+ Категория</string>
    <string name="cat_item_btn_add">Добавить</string>
    <string name="start">Начать</string>
    <string name="createPass">Создание пароля</string>
    <string name="next">Продолжить</string>
    <string name="quest">Контрольные вопросы: </string>
    <string name="introduction">Добро пожаловать в Finance PRO!</string>
    <string name="intr2">Finance PRO - приложение для простого учета \nдоходов и расходов</string>
</resources>