<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CheckAns">


    <TextView
        android:id="@+id/quest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Main"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/quest1"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/quest2"
        android:layout_below="@id/etAns1"
        android:layout_marginHorizontal="10dp"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/quest2" />

    <TextView
        android:id="@+id/quest3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAns2"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/quest3"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/etAns1"
        android:layout_below="@id/quest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:inputType="textPersonName"
        android:hint="Ответ на контрольный вопрос" />

    <EditText
        android:id="@+id/etAns2"
        android:layout_below="@id/quest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:inputType="textPersonName"
        android:hint="Ответ на контрольный вопрос" />

    <EditText
        android:id="@+id/etAns3"
        android:layout_below="@id/quest3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:inputType="textPersonName"
        android:hint="Ответ на контрольный вопрос" />


    <TextView
        android:id="@+id/Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="170dp"
        android:fontFamily="monospace"
        android:text="Контрольный вопрос:"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/etAns3"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="Подтвердить"
        android:textColor="@color/black"/>

</RelativeLayout>